<resources>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_successful">Login Successful</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember Me</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>

    <string name="app_name">MaggioliEbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>

    <string name="add_favorite_book">Book added</string>
    <string name="remove_favorite_book">Book removed</string>

    <string name="note">Note</string>
    <string name="add_a_note">Add a note</string>
    <string name="add_an_annotation">Add an annotation</string>
    <string name="delete_highlight_or_annotation">Delete highlight or annotation</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="no_result">No result</string>
    <string name="epubactivity_drm_info">DRM Info</string>
    <string name="epubactivity_set_bookmark">Add a bookmark</string>
    <string name="epubactivity_settings">User Settings</string>
    <string name="epubactivity_book_nav_options">Book navigation menu</string>
    <string name="epubactivity_read_aloud_start">Read Aloud</string>
    <string name="epubactivity_read_aloud_stop">Stop Read Aloud</string>
    <string name="epubactivity_search">Search</string>

    <string name="epubactivity_accessibility">Accessibility</string>
    <string name="epubactivity_accessibility_screen_reader_start">Start Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_pause">Pause Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_resume">Resume Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_stop">Stop Screen Reader</string>
    <string name="chapter_page">Chapter / Page</string>
    <string name="more_options">More Options</string>
    <string name="progression">Progression</string>
    <string name="timestamp">Timestamp</string>

    <string name="contents_tab_label">Contents</string>
    <string name="bookmarks_tab_label">Bookmarks</string>
    <string name="highlights_tab_label">Highlights</string>
    <string name="pagelist_tab_label">Page List</string>
    <string name="landmarks_tab_label">Landmarks</string>
    <string name="action_mode_menu_highlight">Highlight</string>
    <string name="action_mode_menu_underline">Underline</string>
    <string name="action_mode_menu_note">Note</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_exists">Bookmark already exists</string>
    <string name="popup_delete_button">DELETE</string>

    <string name="drm_information_header">INFORMATION</string>
    <string name="title_fragment_drm_management">DRM Management</string>
    <string name="drm_label_license_type">License Type</string>
    <string name="drm_label_state">State</string>
    <string name="drm_label_provider">Provider</string>
    <string name="drm_label_issued">Issued</string>
    <string name="drm_label_updated">Updated</string>
    <string name="drm_label_rights">RIGHTS</string>
    <string name="drm_label_prints_left">Prints left</string>
    <string name="drm_label_copies_left">Copies left</string>
    <string name="drm_label_start">Start</string>
    <string name="drm_label_end">End</string>
    <string name="drm_label_potential_right_end">Potential right end</string>
    <string name="drm_label_actions">ACTIONS</string>
    <string name="drm_label_renew">RENEW</string>
    <string name="drm_label_return">RETURN</string>
    <string name="zero">00:00</string>
    <string name="chapter">Chapter</string>

    <string name="return_publication">This will return the publication</string>
    <string name="return_button">Return</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="brightness_lower">Brightness lower</string>
    <string name="brightness_higher">Brightness higher</string>
    <string name="menu_label_drm">DRM</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_toc">TOC</string>
    <string name="usersettings_label_font">Font</string>
    <string name="usersettings_appearance_default">Default</string>
    <string name="usersettings_appearance_sepia">Sepia</string>
    <string name="usersettings_appearance_night">Night</string>
    <string name="usersettings_label_scroll_mode">Scroll mode</string>
    <string name="usersettings_publisher_default">"Publisher's Default"</string>
    <string name="usersettings_publisher_default_accessibility">"Publisher's Default Settings"</string>
    <string name="usersettings_label_columns">Columns</string>
    <string name="usersettings_auto">Auto</string>
    <string name="usersettings_column_one">1</string>
    <string name="usersettings_column_two">2</string>
    <string name="usersettings_label_page_margins">Page Margins</string>
    <string name="usersettings_page_margin_default">0.75</string>
    <string name="usersettings_label_word_spacing">Word Spacing</string>
    <string name="usersettings_label_letter_spacing">Letter Spacing</string>
    <string name="usersettings_label_line_height">Line Height</string>
    <string name="usersettings_label_TTS_speech_speed">TTS speed</string>

    <string name="usersettings_description_TTS_speech_speed">Set TTS speech speed</string>
    <string name="usersettings_description_brightness">Set Brightness</string>
    <string name="usersettings_description_font_increase">Increase Font Size</string>
    <string name="usersettings_description_font_decrease">Decrease Font Size</string>
    <string name="usersettings_description_pm_increase">Increase Page Margins Size</string>
    <string name="usersettings_description_pm_decrease">Decrease Page Margins Size</string>
    <string name="usersettings_description_ws_increase">Increase Word Spacing</string>
    <string name="usersettings_description_ws_decrease">Decrease Word Spacing</string>
    <string name="usersettings_description_ls_increase">Increase Letter Spacing</string>
    <string name="usersettings_description_ls_decrease">Decrease Letter Spacing</string>
    <string name="usersettings_description_lh_increase">Increase Line Height</string>
    <string name="usersettings_description_lh_decrease">Decrease Line Height</string>
    <string name="select_a_font">Select a font</string>

    <string name="unable_to_move_pub">Unable to move publication into the library</string>
    <string name="import_publication_success">Publication added to your library</string>
    <string name="unable_add_pub_database">Unable to add publication to the database</string>

    <!-- ABOUT -->
    <string name="app_version_header">Version</string>
    <string name="app_version_label">App Version:</string>
    <string name="app_version">1.3.0</string>
    <string name="copyright_label">Copyright</string>
    <string name="copyright">\@ 2022 Maggioli S.p.A.</string>
    <string name="bsd_license_label">[BSD-3 license]</string>
    <string name="bsd_license_label_accessible">[B S D 3 license]</string>
    <string name="author_label">Author</string>
    <string name="author_text">Filippo Paganelli\n(filippo.paganelli@maggioli.it)</string>
</resources>