<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/book_open_page_variant"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/full_heart"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/information"
            android:title="@string/menu_about" />
    </group>
</menu>