<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.filo.maggioliebook.android.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="it.filo.maggioliebook.android.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/nav_home"/>
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="it.filo.maggioliebook.android.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="it.filo.maggioliebook.android.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="it.filo.maggioliebook.android.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" >
    </fragment>
</navigation>